--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-14  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-sections.txt: added
+	gimp_register_file_handler_mime().
+
+	* libgimp/tmpl/gimpfileops.sgml: regenerated.
+
 2004-05-13  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/tmpl/gimpthumbnail.sgml: regenerated.
