--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/old-photo.scm: fixed wrong use of
+	layer ID; bug #142326.
+
 2004-05-15  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcurvestool.c: fixed position of vertical line
