--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-17  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/edit-actions.c (edit_actions_update): don't forget
+	to set the sensitivity of "edit-named-copy".
+
 2004-05-17  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpimage.c (gimp_image_init): initialize the image
