2004-05-17  Michael Natterer  <mitch@gimp.org>
	* app/actions/tool-options-actions.c: added icons to the Save,
	Load, Rename and Delete submenus.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13283 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-17  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/tool-options-actions.c: added icons to the Save,
+	Load, Rename and Delete submenus.
+
+2004-05-17  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/edit-actions.c (edit_actions_update): don't forget
 	to set the sensitivity of "edit-named-copy".
 
