--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-17  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/AlienMap2.c: HIG-ified (more or less).
+
 2004-05-17  Michael Natterer  <mitch@gimp.org>
 
 	* menus/menus.xsl: put the image popup menu into a dummy menubar
