2004-05-17  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CEL.c
	* plug-ins/common/CML_explorer.c: ported to GtkFileChooser and
	HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13286 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-17  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/CEL.c
+	* plug-ins/common/CML_explorer.c: ported to GtkFileChooser and
+	HIG-ified.
+
+2004-05-17  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/AlienMap2.c: HIG-ified (more or less).
 
 2004-05-17  Michael Natterer  <mitch@gimp.org>
