--- a/tips/ru.po
+++ b/tips/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gimp.TIPS.ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 22:57+0100\n"
-"PO-Revision-Date: 2004-05-10 18:59+0400\n"
+"PO-Revision-Date: 2004-05-15 15:52+0400\n"
 "Last-Translator: AnatolyA. Yakushin <jaa@altlinux.ru>\n"
 "Language-Team: russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -135,7 +135,7 @@ msgid ""
 "plug-in to work on the whole image."
 msgstr ""
 "Большинство плагинов работают с активным слоем активного изображения. В "
-"некоторых случаях надо объединять слои (Слои-&gt;Flatten Image), чтобы "
+"некоторых случаях надо объединять слои (Изображение-&gt;Свести изображение), чтобы "
 "плагин обработал все изображение ."
 
 #: tips/gimp-tips.xml.in.h:14
@@ -156,7 +156,7 @@ msgstr ""
 "Некоторые эффекты применимы не ко всем типам изображения. Иногда для того, "
 "чтобы воспользоваться тем или иным фильтром, нужно перевести изображение в "
 "режим RGB (Изображение-&gt;Режим-&gt;RGB), добавить альфа-канал (Слои-&gt;"
-"Добавить альфа-канал) или свести изображение (Слои-&gt;Flatten Image)."
+"Добавить альфа-канал) или свести изображение (Изображение-&gt;Свести изображение)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -278,7 +278,7 @@ msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
-"Если диалога слоев переместить слой на панель инструментов, то будет создано "
+"Если находясь в диалоге слоев переместить слой на панель инструментов, то будет создано "
 "новое изображение, состоящее только из этого слоя."
 
 #: tips/gimp-tips.xml.in.h:28
@@ -325,7 +325,7 @@ msgid ""
 "are making a selection in order to constrain it to a perfect square or "
 "circle, or to have it centered on its starting point."
 msgstr ""
-"Чтобы создать выделенную облсать в виде квадрата и ли круга, а так же , "
+"Чтобы создать выделенную область в виде квадрата или круга, а так же , "
 "чтобы создать выделенную область из указанного центра, используйте клавиши "
 "<tt>Shift</tt> и <tt>Ctrl</tt>."
 
