--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-18  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-05-13  Sven Neumann  <sven@gimp.org>
 
 	* de.po: fixed wrong translation of format strings that caused bug
