--- a/po-libgimp/ru.po
+++ b/po-libgimp/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: gimp.LIBGIMP.ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2004-04-20 00:07+0400\n"
+"PO-Revision-Date: 2004-05-16 14:46+0400\n"
 "Last-Translator: AnatolyA. Yakushin <jaa@altlinux.ru>\n"
 "Language-Team: russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -496,7 +496,7 @@ msgstr "Наклонить"
 
 #: libgimpwidgets/gimpunitmenu.c:304
 msgid "More..."
-msgstr "Дополнительно..."
+msgstr "Еще..."
 
 #: libgimpwidgets/gimpunitmenu.c:614
 msgid "Unit Selection"
