--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/channel_mixer.c
+	* plug-ins/common/gqbist.c: ported to GtkFileChooser and
+	HIG-ified.
+
+	* plug-ins/common/spheredesigner.c: ditto, but needs more love.
+
 2004-05-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-in-proc.[ch] (plug_in_proc_def_get_label): new
