--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/curve_bend.c
+	* plug-ins/ifscompose/ifscompose.c: ported to GtkFileChooser and
+	HIG-ified.
+
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/channel_mixer.c
 	* plug-ins/common/gqbist.c: ported to GtkFileChooser and
 	HIG-ified.
