--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/gimpressionist/brush.c: ported to GtkFileChooser.
+
+	* plug-ins/gimpressionist/gimpressionist.h
+	* plug-ins/gimpressionist/ppmtool.[ch]: sprinkled some const
+	qualifiers.
+
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/curve_bend.c
 	* plug-ins/ifscompose/ifscompose.c: ported to GtkFileChooser and
 	HIG-ified.
