--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimptoolinfo.c: made the "visible" property serializable.
+
+	* app/tools/gimp-tools.c: store the tools' order and visibility
+	in a new config file called "toolrc".
+
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gimpressionist/brush.c: ported to GtkFileChooser.
