2004-05-18  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/aa.c
	* plug-ins/common/align_layers.c
	* plug-ins/common/animationplay.c
	* plug-ins/common/apply_lens.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13293 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/aa.c
+	* plug-ins/common/align_layers.c
+	* plug-ins/common/animationplay.c
+	* plug-ins/common/apply_lens.c: HIG-ified.
+
 2004-05-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimptoolinfo.c: made the "visible" property serializable.
