--- a/NEWS
+++ b/NEWS
@@ -2,31 +2,39 @@ The GNU Image Manipulation Program Version 2.1
 ----------------------------------------------
 
 This is the development branch of The GIMP. Here's where new features
-are being added. Somewhen this summer the next stable GIMP release,
+are being added. Sometime this summer the next stable GIMP release,
 GIMP 2.2, will emerge out of this.
 
 
 Overview of Changes since 2.0
 =============================
-
- - Use new widgets and frameworks provided by GTK+ 2.4; this means
-   * use the new GtkFileChooser dialog
-   * ported the menus to GtkUIManager, create all core menus from XML
-     files at runtime
-   * use a global accelerator table in all docks and image windows
-   * added replacement widgets based on GtkComboBox for most users of
-     GtkOptionMenu (GimpUnitMenu remains to be ported)
-   * started to make the order and visibility of tools in the toolbox
-     configurable
-   * allow to keep toolbox and dock windows above (if the WM supports
-     this hint)
- - Plug-ins can now register the same procedures in multiple places,
-   the API to register menu entries has been changed in a
-   backward-compatible fashion.
- - AlienMap and GIcon plug-ins were removed.
- - A plug-in to load and save windows icon files has been added.
- - Work has begun to make the GIMP user interface comply better with
-   the GNOME HIG. This is an ongoing effort and the interface is quite
-   inconsistent at the moment.
- - Allow to clear the undo history.
- - Allow pixels as image unit; simplifies handling of units.
+GIMP 2.2 includes the following enhancements:
+ - Major user interface improvements
+   * Work has begun to make the GIMP user interface comply better with
+     the GNOME HIG. This is an ongoing effort and the interface is quite
+     inconsistent at the moment.
+   * Users are now allowed to clear the undo history.
+   * Pixels are now considered image units; this simplifies the handling of 
+     units.
+   * New widgets and frameworks provided by GTK+ 2.4 are used; this means
+     + uses the new GtkFileChooser dialog, vastly improving the file dialogs.
+     + includes port of menus to GtkUIManager, which creates all core menus from
+       XML files at runtime. This means that menu items can be rearrainged by 
+       users simply by editing the files.
+     + uses a global accelerator table in all docks and image windows.  This 
+       means that a hotkey will do the same thing regardless of which dock
+       or image window you are using.
+     + adds replacement widgets based on GtkComboBox for most uses of
+       GtkOptionMenu (GimpUnitMenu remains to be ported)
+     + makes the order and visibility of tools in the toolbox configurable
+       (This effort has not yet been completed.)
+     + allows keeping toolbox and dock windows above other windows (if the WM 
+       supports this hint)
+ - Some changes to plug-ins
+   * Plug-ins can now register the same procedures in multiple places (the
+     API to register menu entries has been changed in a backward-compatible 
+     fashion.)
+   * The obsolete AlienMap and GIcon plug-ins were removed.  AlienMap 2 does
+     everything than AlienMap did, and the GIMP-specific GIcon format has not
+     been used by anything for quites some time now.
+   * A plug-in to load and save windows icon files has been added.
