--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,31 @@
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpsizeentry.[ch] (gimp_size_entry_attach_label):
+	return the created label widget so that it can for example be put
+	into a GtkSizeGroup.
+
+	* plug-ins/libgimpoldpreview/gimpoldpreview.[ch]: removed the
+	optional "Preview" frame. Always put the preview into a sunken
+	frame.
+
+	* plug-ins/common/AlienMap2.c
+	* plug-ins/common/blinds.c
+	* plug-ins/common/flarefx.c
+	* plug-ins/common/glasstile.c
+	* plug-ins/common/grid.c
+	* plug-ins/common/illusion.c
+	* plug-ins/common/jigsaw.c
+	* plug-ins/common/max_rgb.c
+	* plug-ins/common/nlfilt.c
+	* plug-ins/common/noisify.c
+	* plug-ins/common/nova.c
+	* plug-ins/common/plasma.c
+	* plug-ins/common/polar.c
+	* plug-ins/common/waves.c
+	* plug-ins/common/wind.c: changed accordingly, HIG-ified.
+
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/aa.c
 	* plug-ins/common/align_layers.c
 	* plug-ins/common/animationplay.c
