--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/tmpl/gimphelpui.sgml
+	* libgimpwidgets/tmpl/gimpsizeentry.sgml: regenerated.
+
 2004-05-14  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt: added
