2004-05-18  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/blur.c
	* plug-ins/common/borderaverage.c
	* plug-ins/common/bumpmap.c
	* plug-ins/common/ccanalyze.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13298 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/blur.c
+	* plug-ins/common/borderaverage.c
+	* plug-ins/common/bumpmap.c
+	* plug-ins/common/ccanalyze.c: HIG-ified.
+
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpsizeentry.[ch] (gimp_size_entry_attach_label):
 	return the created label widget so that it can for example be put
 	into a GtkSizeGroup.
