HIGified, fixed indendation, speed improvement (around 70 %).
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13299 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-18  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/common/sel_gauss.c: HIGified, fixed indendation, speed
+	improvement (around 70 %).
+
 2004-05-18  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/blur.c
