--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-05-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/checkerboard.c
+	* plug-ins/common/colorify.c
+	* plug-ins/common/colortoalpha.c
+	* plug-ins/common/compose.c
+	* plug-ins/common/convmatrix.c
+	* plug-ins/common/csource.c
+	* plug-ins/common/cubism.c
+	* plug-ins/common/decompose.c
+	* plug-ins/common/deinterlace.c
+	* plug-ins/common/depthmerge.c
+	* plug-ins/common/despeckle.c
+	* plug-ins/common/destripe.c
+	* plug-ins/common/diffraction.c
+	* plug-ins/common/displace.c: HIG-ified.
+
 2004-05-18  Michael Natterer  <mitch@gimp.org>
 
 	Allow plug-ins to register menu icons. Fixes bug #120500.
