--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/channel_mixer.c: added some stock icons.
+
+	* plug-ins/common/edge.c
+	* plug-ins/common/emboss.c
+	* plug-ins/common/engrave.c
+	* plug-ins/common/exchange.c: HIG-ified.
+
+	* plug-ins/common/sel_gauss.c: tiny changes for a more consistent
+	HIG-ification.
+
 2004-05-19  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/plug_in.pdb: made plugin_icon_register() an
