--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-05-17  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
