--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-19  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: updated.
@@ -5,11 +9,11 @@
 2004-05-17  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
-	
+
 2004-05-14  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation (incomplete)
-	
+
 2004-05-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
