--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-19  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-05-18  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
