--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* app/paint/gimppaintcore.c (gimp_paint_core_interpolate): make
+	sure that pressure never becomes negative. Fixes bug #123811;
+	thanks to Philip Lafleur for investigating this problem.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/channel_mixer.c: added some stock icons.
 
 	* plug-ins/common/edge.c
