2004-05-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/film.c
	* plug-ins/common/fractaltrace.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13308 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/film.c
+	* plug-ins/common/fractaltrace.c: HIG-ified.
+
+2004-05-19  Sven Neumann  <sven@gimp.org>
+
 	* app/paint/gimppaintcore.c (gimp_paint_core_interpolate): make
 	sure that pressure never becomes negative. Fixes bug #123811;
 	thanks to Philip Lafleur for investigating this problem.
